--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
 html{
     background-color: hsl(0, 100%, 74%);
 }
+
+h1{
+    font-family: system-ui;
+    font-size: 55px;
+    color: rgb(236, 221, 221);
+}
