--- a/assets/main.css
+++ b/assets/main.css
@@ -5,4 +5,35 @@
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh !important;
+    
+}
+
+
+.central-div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15%;
+    width: 100%;
+
+}
+
+
+.h1-div{
+    width: 50%;
+    margin: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+.form-div{
+    width: 50%;
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
