--- a/assets/main.css
+++ b/assets/main.css
@@ -13,19 +13,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 15%;
+    padding-top: 13%;
     width: 100%;
-
 }
 
 
 .h1-div{
     width: 50%;
     margin: 20px;
-
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     
 }
 
